--- a/src/South_america.ipynb
+++ b/src/South_america.ipynb
@@ -18,7 +18,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
     "forest = pd.read_csv('./csv/forest.csv', sep = ',')\n",
