--- a/src/Treatment.ipynb
+++ b/src/Treatment.ipynb
@@ -21,7 +21,9 @@
     "soybean_use = pd.read_csv('./csv/soybean_use.csv', sep = ',')\n",
     "vegetable_oil = pd.read_csv('./csv/vegetable_oil.csv', sep = ',')\n",
     "population = pd.read_csv('./csv/population.csv')\n",
-    "population.dropna(inplace=True)\n"
+    "population.dropna(inplace=True)\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
