--- a/src/Exploratore_Analysis.ipynb
+++ b/src/Exploratore_Analysis.ipynb
@@ -10,6 +10,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "%matplotlib inline\n",
     "\n",
     "\n",
