--- a/src/Homework.ipynb
+++ b/src/Homework.ipynb
@@ -903,7 +903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Os dados acima não podem ser removidos, porque sem eles não ocorreria desmatamento no mundo. Basicamente, caso essas informações fossem removidas, o mundo ganharia mais floresta do que está perdendo"
+    "## Os dados acima não podem ser removidos, porque sem eles não ocorreria desmatamento no mundo. Basicamente, caso essas informações fossem retiradas, o mundo ganharia mais floresta do que está perdendo"
    ]
   },
   {
