--- a/src/South_america.ipynb
+++ b/src/South_america.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "def filtroAmericaDoSul(df):\n",
     "    data = df[(df.Código.notna()) &((df['Entidade'] == 'Brazil')#Seleção de alguns países\n",
-    "                                        |(df['Entidade'] == 'Argentina') \n",
+    "                    https://www.youtube.com/watch?v=r4l73teyAJY                    |(df['Entidade'] == 'Argentina') \n",
     "                                        |(df['Entidade'] == 'Bolivia')\n",
     "                                        |(df['Entidade'] == 'Chile')\n",
     "                                        |(df['Entidade'] == 'Guyane')\n",
